--- a/docs/aw1.tex
+++ b/docs/aw1.tex
@@ -120,7 +120,7 @@
 \hypertarget{the-package}{%
 \section{The Package}\label{the-package}}
 
-I have created a package that has provides functions for both gradient
+I have created a package that provides functions for both gradient
 descent and stochastic gradient descent.
 
 The package and all of the files for this project can be found
@@ -149,47 +149,14 @@ This package has no required dependencies.
 The documentation for this package is generated automatically from the
 source files using \texttt{roxygen2}.
 
-The package exports two functions, \texttt{gradDescent} and
-\texttt{stocGradDescent}. The documentation for them can be accessed
-from the shell using the \texttt{?gradDescent} and
-\texttt{?stocGradDescent} commands.
+The package exports two functions, \texttt{grad\_descent} and
+\texttt{stoc\_grad\_descent}. The documentation for them can be accessed
+from the shell using the \texttt{?grad\_descent} and
+\texttt{?stoc\_grad\_descent} commands.
 
 Alternatively, the documentation can be accessed in a pdf here:
 
 \url{https://www.github.com/conornewton/sc1-optimization/doc/man.pdf}
-
-\hypertarget{usage}{%
-\subsection{Usage}\label{usage}}
-
-Here are some basic example of how to use the \texttt{gradDescent} and
-\texttt{stocGradDescent} functions.
-
-Firstly, we can use gradDescent to estimate the argument of a local
-minimum of the Rosenbrock function
-
-\begin{Shaded}
-\begin{Highlighting}[]
-    \CommentTok{# Rosenbrock function}
-\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x) (}\DecValTok{1} \OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{])}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\DecValTok{100} \OperatorTok{*}\StringTok{ }\NormalTok{(x[}\DecValTok{2}\NormalTok{] }\OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{]}\OperatorTok{^}\DecValTok{2}\NormalTok{)}\OperatorTok{^}\DecValTok{2}
-    \KeywordTok{grad_descent}\NormalTok{(f, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{), }\DataTypeTok{n =} \DecValTok{100000}\NormalTok{, }\DataTypeTok{step_method =} \StringTok{"BB"}\NormalTok{)}
-\end{Highlighting}
-\end{Shaded}
-
-Secondly, we can use stocGradDescent to estimate the argument that
-minimises the mean square error
-
-\begin{Shaded}
-\begin{Highlighting}[]
-    \CommentTok{# Summand of the objective function}
-\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(w, x, y) (}\KeywordTok{sum}\NormalTok{(w }\OperatorTok{*}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{, x)) }\OperatorTok{-}\StringTok{ }\NormalTok{y)}\OperatorTok{^}\DecValTok{2}
-
-    \CommentTok{# Generating a data set which will appear in the summand}
-\NormalTok{    y <-}\StringTok{ }\KeywordTok{mapply}\NormalTok{(}\ControlFlowTok{function}\NormalTok{(x1, x2) }\KeywordTok{sum}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\DecValTok{20}\NormalTok{, }\DecValTok{1}\NormalTok{) }\OperatorTok{*}\StringTok{ }\KeywordTok{c}\NormalTok{(x1, x2)) }\OperatorTok{+}\StringTok{ }\DecValTok{2}\NormalTok{, }\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{, }\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{)}
-\NormalTok{    data <-}\StringTok{ }\KeywordTok{data.frame}\NormalTok{(}\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{, }\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{, y)}
-
-    \KeywordTok{stoc_grad_descent}\NormalTok{(f, data, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{))}
-\end{Highlighting}
-\end{Shaded}
 
 \hypertarget{testing}{%
 \subsection{Testing}\label{testing}}
@@ -215,10 +182,220 @@ command in the R shell
 \hypertarget{gradient-descent}{%
 \section{Gradient Descent}\label{gradient-descent}}
 
-\newpage
+This focuses on the methodology of my gradient descent implementation.
+The relevant source code and tests can be found at the following urls
+
+\begin{itemize}
+\tightlist
+\item
+  \url{https://github.com/conornewton/sc1-optimization/blob/master/R/gradDescent.R}
+\item
+  \url{https://github.com/conornewton/sc1-optimization/blob/master/tests/testthat/testGradDescent.R}
+\end{itemize}
+
+\hypertarget{introduction}{%
+\subsection{Introduction}\label{introduction}}
+
+Gradient descent methods attempt to find a local minimum of a
+differentiable functions \(f\) by moving along the curve in the opposite
+direction to the gradient at each point. Since the gradient gives the
+direction of the ``fastest increase'' moving in the opposite direction
+should gives us the fastest decrease. Gradient descent is performed by
+iterating the following \[
+    \mathbf{x}_n = \mathbf{x}_{n-1} - \gamma_n \nabla f(\mathbf{x}_{n-1})
+\]
+
+Here \(\gamma_n\) is the step-size. This determines how much we should
+move in the opposite direction of gradient in each step. For simplicity,
+it can be choose to be constant. More effective gradient descent
+approaches use a systematic way of determining \(\gamma_n\) on each
+iteration, such as a line search.
+
+\hypertarget{the-gradient}{%
+\subsection{The Gradient}\label{the-gradient}}
+
+For our gradient descent implementation, we have the option of passing
+as a parameter the gradient of the function we would like to minimize
+otherwise it will estimate the gradient at each point using finite
+differencing.
+
+Finite differencing at a point \(\mathbf{x}\) works by finding the
+gradient of the line passing through two points on each side and close
+to \(\mathbf{x}\). Each component of the gradient is computed by the
+following \[
+(\nabla f (\mathbf{x}))^{(i)} \approx \frac{f(\mathbf{x} + \Delta \mathbf{e}_i) - f(\mathbf{x} - \Delta \mathbf{e}_i)}{2\Delta}
+\] where \(\Delta\) is a small constant.
+
+The gradient is also used to decide when we have found a local minimum.
+If the magnitude of the gradient is small, then we are a point with
+little curvature and therefore close to a local minimum. For our
+gradient descent implementation, the user can provide a tolerance for
+the magnitude of the gradient to decide when to terminate the search.
+
+\hypertarget{step-sizes}{%
+\subsection{Step Sizes}\label{step-sizes}}
+
+In this package, we have the choice of using the following three
+different approaches to calculate step size
+
+\begin{itemize}
+\tightlist
+\item
+  Constant step size
+\item
+  Line Search
+\item
+  Barzilai-Borwein
+\end{itemize}
+
+All three of these approaches share the same guarantee that gradient
+descent will converge to a local minimum if \(f\) is convex and its
+gradient \(\nabla f\) is Lipschitz.
+
+\hypertarget{constant-step-size}{%
+\subsubsection{Constant Step Size}\label{constant-step-size}}
+
+Choosing a constant step size is the most basic approach to gradient
+descent. For every iteration, our estimate for the minimum
+\(\mathbf{x}\) moves by the same distance in the opposite direction of
+the gradient. This can often lead to overshooting/undershooting the
+minimum in that direction, therefore this approach can take long to
+converge. The next two methods both give faster convergence.
+
+\hypertarget{backtracking-line-search}{%
+\subsubsection{Backtracking Line
+Search}\label{backtracking-line-search}}
+
+Line search selects the step size \(\gamma_n\) that satisfies the
+following
+\[ \gamma_n = \underset{\gamma}{\text{argmin}} f(\mathbf{x}_{n-1} - \gamma\nabla f(\mathbf{x}))\]
+This is finding finding the argument \(\gamma\) that minimises \(f\) on
+the line \((\mathbf{x}_{n-1} - \gamma\nabla f(\mathbf{x}))\).
+
+A backtracking approach can be used to quickly estimate this line search
+step size. This works by iterating \[ \alpha_n = \tau \alpha_{n - 1}\]
+where \(\alpha_n\) is the step size and \(\tau \in (0, 1)\) until the
+following is satisfied
+\[{f(\mathbf{x}) - f(\mathbf{x} - \alpha_j \nabla f(\mathbf{x}))} \ge c \alpha_j ||\nabla f(\mathbf{x})||^2\]
+for some \(c \in (0, 1)\). Essentially we are just looking for a
+sufficient drop in the objective function in the direction of
+\(\nabla f(\mathbf{x})\).
+
+\hypertarget{barzilai-borwein-method}{%
+\subsubsection{Barzilai-Borwein Method}\label{barzilai-borwein-method}}
+
+A third approach to calculating the step size is the Barzilai-Borwein
+method. This approach takes into consideration the previous estimate
+\(\mathbf{x}_{n-1}\). The step size is calculated as follows \[
+    \gamma_n = \frac{(\mathbf{x} - \mathbf{x}_{n-1}) \cdot (\nabla f(\mathbf{x}_n) - \nabla f(\mathbf{x}_{n-1}))}{||\nabla f(\mathbf{x}_n) - \nabla f(\mathbf{x}_{n-1})||^2}
+\]
+
+\hypertarget{usage}{%
+\subsection{Usage}\label{usage}}
+
+Here we give some examples of how we can use the \texttt{grad\_descent}
+function.
+
+Firstly, we can use \texttt{grad\_descent} to estimate the argument of
+the local minimum of the Rosenbrock function using a constant step size.
+Our initial guess is the point \((0,0)\) and our optimization will not
+exceed 100000 iterations.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+    \CommentTok{# Rosenbrock function}
+\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x) (}\DecValTok{1} \OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{])}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\DecValTok{100} \OperatorTok{*}\StringTok{ }\NormalTok{(x[}\DecValTok{2}\NormalTok{] }\OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{]}\OperatorTok{^}\DecValTok{2}\NormalTok{)}\OperatorTok{^}\DecValTok{2}
+    \KeywordTok{grad_descent}\NormalTok{(f, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{), }\DataTypeTok{n =} \DecValTok{100000}\NormalTok{, }\DataTypeTok{step_method =} \FloatTok{0.01}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+This can be estimated much quicker if we choose a different step
+methods.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+    \CommentTok{# Uses Barzilai-Borwein}
+\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x) (}\DecValTok{1} \OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{])}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\DecValTok{100} \OperatorTok{*}\StringTok{ }\NormalTok{(x[}\DecValTok{2}\NormalTok{] }\OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{]}\OperatorTok{^}\DecValTok{2}\NormalTok{)}\OperatorTok{^}\DecValTok{2}
+    \KeywordTok{grad_descent}\NormalTok{(f, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{), }\DataTypeTok{n =} \DecValTok{100000}\NormalTok{, }\DataTypeTok{step_method =} \StringTok{"BB"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+\begin{Shaded}
+\begin{Highlighting}[]
+    \CommentTok{# Uses Backtracking Line Search}
+\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x) (}\DecValTok{1} \OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{])}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\DecValTok{100} \OperatorTok{*}\StringTok{ }\NormalTok{(x[}\DecValTok{2}\NormalTok{] }\OperatorTok{-}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{]}\OperatorTok{^}\DecValTok{2}\NormalTok{)}\OperatorTok{^}\DecValTok{2}
+    \KeywordTok{grad_descent}\NormalTok{(f, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{), }\DataTypeTok{n =} \DecValTok{100000}\NormalTok{, }\DataTypeTok{step_method =} \StringTok{"BLS"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+We can give our \texttt{grad\_descent} function an explicit gradient of
+\(f\) and choose a tolerance for our gradient as follows
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x) x[}\DecValTok{1}\NormalTok{]}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\NormalTok{x[}\DecValTok{2}\NormalTok{]}\OperatorTok{^}\DecValTok{2} \OperatorTok{+}\StringTok{ }\DecValTok{3} \OperatorTok{*}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{] }\OperatorTok{+}\StringTok{ }\DecValTok{2} \OperatorTok{*}\StringTok{ }\NormalTok{x[}\DecValTok{2}\NormalTok{] }\OperatorTok{+}\StringTok{ }\DecValTok{9}
+\NormalTok{    grad_f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(x) }\KeywordTok{c}\NormalTok{(}\DecValTok{2} \OperatorTok{*}\StringTok{ }\NormalTok{x[}\DecValTok{1}\NormalTok{] }\OperatorTok{+}\StringTok{ }\DecValTok{3}\NormalTok{, }\DecValTok{2} \OperatorTok{*}\StringTok{ }\NormalTok{x[}\DecValTok{2}\NormalTok{] }\OperatorTok{+}\StringTok{ }\DecValTok{2}\NormalTok{)}
+    \KeywordTok{grad_descent}\NormalTok{(f, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{1}\NormalTok{), grad_f, }\DataTypeTok{tol =} \FloatTok{1e-4}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
+This summarises pretty much all of the functionality of the
+\texttt{grad\_descent} function. \newpage
 
 \hypertarget{stochastic-gradient-descent}{%
 \section{Stochastic Gradient
 Descent}\label{stochastic-gradient-descent}}
+
+This focuses on the methodology of my gradient descent implementation.
+The relevant source code and tests can be found at the following urls
+
+\begin{itemize}
+\tightlist
+\item
+  \url{https://github.com/conornewton/sc1-optimization/blob/master/R/gradDescent.R}
+\item
+  \url{https://github.com/conornewton/sc1-optimization/blob/master/tests/testthat/testGradDescent.R}
+\end{itemize}
+
+\hypertarget{introduction-1}{%
+\subsection{Introduction}\label{introduction-1}}
+
+Stochastic gradient descent is a gradient descent method that is
+commonly used to find minimum of a function that depends on a large data
+set.
+
+Instead, if we can break up the objective function into \(n\) pieces \[
+Q(\mathbf{x}) = \sum_{i=1}^nQ_i(\mathbf{x})
+\] where each \(Q_i\) only involves using the i'th data point, we can
+then apply stochastic gradient descent. Functions of this form are
+common in machine learning, such as mean square error, log-likelihood
+etc.
+
+Stochastic gradient descent can be performed by iterating the following
+\[
+    \mathbf{x}_{n} = \mathbf{x}_{n-1} - \gamma \nabla Q_i(\mathbf{x})
+\] In each iteration we are only considering a single data point, but by
+the end of the computation all of the data points have been involved in
+learning \(\mathbf{x}\). For our simple implementation we have set
+\(\gamma\) to be constant.
+
+\hypertarget{usage-1}{%
+\subsection{Usage}\label{usage-1}}
+
+We can use stoc\_grad\_descent to estimate the argument that minimises
+the mean square error as follows
+
+\begin{Shaded}
+\begin{Highlighting}[]
+    \CommentTok{# Summand of the objective function}
+\NormalTok{    f <-}\StringTok{ }\ControlFlowTok{function}\NormalTok{(w, x, y) (}\KeywordTok{sum}\NormalTok{(w }\OperatorTok{*}\StringTok{ }\KeywordTok{c}\NormalTok{(}\DecValTok{1}\NormalTok{, x)) }\OperatorTok{-}\StringTok{ }\NormalTok{y)}\OperatorTok{^}\DecValTok{2}
+
+    \CommentTok{# Generating a data set which will appear in the summand}
+\NormalTok{    y <-}\StringTok{ }\KeywordTok{mapply}\NormalTok{(}\ControlFlowTok{function}\NormalTok{(x1, x2) }\KeywordTok{sum}\NormalTok{(}\KeywordTok{c}\NormalTok{(}\DecValTok{20}\NormalTok{, }\DecValTok{1}\NormalTok{) }\OperatorTok{*}\StringTok{ }\KeywordTok{c}\NormalTok{(x1, x2)) }\OperatorTok{+}\StringTok{ }\DecValTok{2}\NormalTok{, }\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{, }\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{)}
+\NormalTok{    data <-}\StringTok{ }\KeywordTok{data.frame}\NormalTok{(}\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{, }\DecValTok{1}\OperatorTok{:}\DecValTok{100}\NormalTok{, y)}
+
+    \KeywordTok{stoc_grad_descent}\NormalTok{(f, data, }\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{))}
+\end{Highlighting}
+\end{Shaded}
 
 \end{document}
