--- a/docs/aw1.tex
+++ b/docs/aw1.tex
@@ -143,6 +143,16 @@ command in an R shell if \texttt{devtools} is installed
 
 This package has no required dependencies.
 
+To load the package in R, use the following command
+
+\begin{Shaded}
+\begin{Highlighting}[]
+    \KeywordTok{library}\NormalTok{(sc1optimization)}
+\end{Highlighting}
+\end{Shaded}
+
+Notice that there is no hyphen in the package name here.
+
 \hypertarget{documentation}{%
 \subsection{Documentation}\label{documentation}}
 
